--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -6,83 +6,83 @@
 <title>Insert title here</title>
 </head>
 <body>
-<section>
-<div class="container p-5 mb-3">
-<p class="text-center fs-3 mt-4 fw-bold">Admin Dashboard</p>
-<div class="row p-5">
-<div class="col-md-4 mt-4">
-<a href="#" class="text-decoration-none">
-<div class="card card-sh">
-<div class="card-body text-center text-primary">
-<i class="fa-solid fa-square-plus fa-3x text-primary"></i>
-<h4>Add Product</h4>
-<p class="text-primary fs-4">................</p>
-</div>
-</div>
-</a>
-</div>
+	<section>
+		<div class="container p-5 mb-3">
+			<p class="text-center fs-3 mt-4 fw-bold">Admin Dashboard</p>
+			<div class="row p-5">
+				<div class="col-md-4 mt-4">
+					<a href="/admin/addproduct" class="text-decoration-none">
+						<div class="card card-sh">
+							<div class="card-body text-center text-primary">
+								<i class="fa-solid fa-square-plus fa-3x text-primary"></i>
+								<h4>Add Product</h4>
+								<p class="text-primary fs-4">................</p>
+							</div>
+						</div>
+					</a>
+				</div>
 
-<div class="col-md-4 mt-4">
-<a href="#" class="text-decoration-none">
-<div class="card card-sh">
-<div class="card-body text-center text-warning">
-<i class="fa-solid fa-list fa-3x text-warning"></i>
-<h4>Add Category</h4>
-<p class="text-warning fs-4">................</p>
-</div>
-</div>
-</a>
-</div>
+				<div class="col-md-4 mt-4">
+					<a href="/admin/category" class="text-decoration-none">
+						<div class="card card-sh">
+							<div class="card-body text-center text-warning">
+								<i class="fa-solid fa-list fa-3x text-warning"></i>
+								<h4>Add Category</h4>
+								<p class="text-warning fs-4">................</p>
+							</div>
+						</div>
+					</a>
+				</div>
 
-<div class="col-md-4 mt-4">
-<a href="#" class="text-decoration-none">
-<div class="card card-sh">
-<div class="card-body text-center text-success">
-<i class="fa-solid fa-table-list fa-3x text-success"></i>
-<h4>View Product</h4>
-<p class="text-success fs-4">................</p>
-</div>
-</div>
-</a>
-</div>
+				<div class="col-md-4 mt-4">
+					<a href="#" class="text-decoration-none">
+						<div class="card card-sh">
+							<div class="card-body text-center text-success">
+								<i class="fa-solid fa-table-list fa-3x text-success"></i>
+								<h4>View Product</h4>
+								<p class="text-success fs-4">................</p>
+							</div>
+						</div>
+					</a>
+				</div>
 
-<div class="col-md-4 mt-4">
-<a href="#" class="text-decoration-none">
-<div class="card card-sh">
-<div class="card-body text-center text-warning">
-<i class="fa-solid fa-gift fa-3x text-warning"></i>
-<h4>Orders</h4>
-<p class="text-warning fs-4">................</p>
-</div>
-</div>
-</a>
-</div>
+				<div class="col-md-4 mt-4">
+					<a href="#" class="text-decoration-none">
+						<div class="card card-sh">
+							<div class="card-body text-center text-warning">
+								<i class="fa-solid fa-gift fa-3x text-warning"></i>
+								<h4>Orders</h4>
+								<p class="text-warning fs-4">................</p>
+							</div>
+						</div>
+					</a>
+				</div>
 
-<div class="col-md-4 mt-4">
-<a href="#" class="text-decoration-none">
-<div class="card card-sh">
-<div class="card-body text-center text-success">
-<i class="fa-regular fa-circle-user fa-3x text-success"></i>
-<h4>Users</h4>
-<p class="text-success fs-4">................</p>
-</div>
-</div>
-</a>
-</div>
+				<div class="col-md-4 mt-4">
+					<a href="#" class="text-decoration-none">
+						<div class="card card-sh">
+							<div class="card-body text-center text-success">
+								<i class="fa-regular fa-circle-user fa-3x text-success"></i>
+								<h4>Users</h4>
+								<p class="text-success fs-4">................</p>
+							</div>
+						</div>
+					</a>
+				</div>
 
-<div class="col-md-4 mt-4">
-<a href="#" class="text-decoration-none">
-<div class="card card-sh">
-<div class="card-body text-center text-primary">
-<i class="fa-solid fa-user-plus fa-3x text-primary"></i>
-<h4>Add Admin</h4>
-<p class="text-primary fs-4">................</p>
-</div>
-</div>
-</a>
-</div>
-</div>
-</div>
-</section>
+				<div class="col-md-4 mt-4">
+					<a href="#" class="text-decoration-none">
+						<div class="card card-sh">
+							<div class="card-body text-center text-primary">
+								<i class="fa-solid fa-user-plus fa-3x text-primary"></i>
+								<h4>Add Admin</h4>
+								<p class="text-primary fs-4">................</p>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
