--- a/src/main/resources/templates/admin/edit_category.html
+++ b/src/main/resources/templates/admin/edit_category.html
@@ -9,10 +9,10 @@
 	<section>
 		<div class="container-fluid p-5 mt-5">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 offset-md-4">
 					<div class="card card-sh">
 						<div class="card-header text-center">
-							<p class="fs-4 fw-bold">Add Category</p>
+							<p class="fs-4 fw-bold">Edit Category</p>
 							<div th:if="${SuccMsg}"
 								class="alert alert-success py-1 px-2 mb-0"
 								style="font-size: 14px;">
@@ -26,10 +26,11 @@
 							</div>
 						</div>
 						<div class="card-body">
-							<form action="/admin/saveCategory" method="post"
+							<form action="/admin/updateCategory" method="post"
 								enctype="multipart/form-data">
+								<input type="hidden" name="id" th:value="${category.id}">
 								<div class="md-3">
-									<label>Enter Category</label> <input type="text" name="name"
+									<label>Enter Category</label> <input type="text" name="name" th:value="${category.name}"
 										class="form-control" required>
 								</div>
 
@@ -37,13 +38,13 @@
 									<label>Status</label>
 									<div class="form-check">
 										<input class="form-check-input" type="radio" value="true"
-											name="isActive" id="radioDefault1" checked> <label
+											name="isActive" th:checked="${category.isActive==true}" id="radioDefault1"> <label
 											class="form-check-label" for="radioDefault1"> Active
 										</label>
 									</div>
 									<div class="form-check">
 										<input class="form-check-input" type="radio" value="false"
-											name="isActive" id="radioDefault2"> <label
+											name="isActive" th:checked="${category.isActive==false}" id="radioDefault2"> <label
 											class="form-check-label" for="radioDefault2">
 											Inactive </label>
 									</div>
@@ -53,43 +54,13 @@
 									<label>Upload Image</label> <input type="file" name="file"
 										class="form-control" required>
 								</div>
-								<button class="btn btn-primary col-md-12 mt-3">Add</button>
+								<img th:src="@{'/img/category_img/'+${category.imageName}}" width="100px" height="100px">
+								<button class="btn btn-primary col-md-12 mt-3">Update</button>
 							</form>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-8">
-					<div class="card card-sh">
-						<div class="card-header fs-4 text-center">Category Details</div>
-						<div class="card-body">
-							<table class="table">
-								<thead>
-									<tr>
-										<th scope="col">SL No</th>
-										<th scope="col">Category</th>
-										<th scope="col">Status</th>
-										<th scope="col">Image</th>
-										<th scope="col">Action</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr th:each="cat,c:${categorys}">
-										<th scope="row">[[${c.count}]]</th>
-										<td>[[${cat.name}]]</td>
-										<td>[[${cat.isActive}]]</td>
-										<td><img
-											th:src="@{'/img/category_img/'+${cat.imageName}}"
-											width="50px" height="50px"></td>
-										<td>
-										<a th:href="@{'/admin/edit_category/'+${cat.id}}" class="btn btn-primary btn-sm"><i class="fa-solid fa-pen-to-square  fa-1x"></i>Edit</a>
-										<a th:href="@{'/admin/deleteCategory/'+${cat.id}}" href="#" class="btn btn-danger btn-sm"><i class="fa-solid fa-trash"></i>Delete</a>
-										</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</section>
