--- a/src/main/resources/templates/admin/add_product.html
+++ b/src/main/resources/templates/admin/add_product.html
@@ -11,9 +11,23 @@
 			<div class="row">
 				<div class="col-md-6 offset-md-3">
 					<div class="card card-sh">
-						<div class="card-header text-center fs-4">Add Product</div>
+						<div class="card-header text-center fs-4">
+						<p class="fs-4">Add Product</p>
+						<div th:if="${SuccMsg}"
+								class="alert alert-success py-1 px-2 mb-0"
+								style="font-size: 14px;">
+								<span th:text="${SuccMsg}"></span>
+							</div>
+
+							<div th:if="${errorMsg}"
+								class="alert alert-danger py-1 px-2 mb-0"
+								style="font-size: 14px;">
+								<span th:text="${errorMsg}"></span>
+							</div>
+						
+						</div>
 						<div class="card-body">
-							<form>
+							<form action="/admin/saveProduct" method="post" enctype="multipart/form-data">
 								<div class="mb-3">
 									<label>Enter Title</label> <input type="text" name="title"
 										class="form-control">
@@ -21,27 +35,27 @@
 
 								<div class="mb-3">
 									<label>Enter Description</label>
-									<textarea row="3" cols="" class="form-control"></textarea>
+									<textarea row="3" cols="" class="form-control" name="description"></textarea>
 								</div>
 
 								<div class="mb-3">
-									<label>Enter Category</label> <select class="form-control">
+									<label>Enter Category</label> <select class="form-control" name="category">
 										<option>--select--</option>
-										<option>Electronics</option>
+										<option th:each="c:${categories}">[[${c.name}]]</option>
 									</select>
 
 									<div class="mb-3">
-										<label>Enter Price</label> <input type="number" name="title"
+										<label>Enter Price</label> <input type="number" name="price"
 											class="form-control">
 									</div>
 									<div class="row">
 										<div class="mb-3 col">
-											<label>Enter Stock</label> <input type="text" name="title"
+											<label>Enter Stock</label> <input type="text" name="stock"
 												class="form-control">
 										</div>
 
 										<div class="mb-3 col">
-											<label>Upload Image</label> <input type="file" name="title"
+											<label>Upload Image</label> <input type="file" name="file"
 												class="form-control">
 										</div>
 									</div>
