ViewProduct page with delete operation completed

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -65,7 +65,7 @@
 	
 	<!-- start footer -->
 	
-	<div class="container-fluid p-1 bg-primary text-center text-white mt-1">
+	<div class="container-fluid p-1 bg-primary text-center text-white mt-1" style="margin-top: 250px">
 	<p>ecom.com</p>
 	</div>
 	
