--- a/src/main/resources/templates/admin/edit_product.html
+++ b/src/main/resources/templates/admin/edit_product.html
@@ -9,7 +9,7 @@
 	<section>
 		<div class="container p-5 mt-3">
 			<div class="row">
-				<div class="col-md-6 offset-md-3">
+				<div class="col-md-8 offset-md-2">
 					<div class="card card-sh">
 						<div class="card-header text-center fs-4">
 						<p class="fs-4">Edit Product</p>
@@ -39,16 +39,30 @@
 									<textarea row="3" cols="" class="form-control" name="description">[[${product.description}]]</textarea>
 								</div>
 
-								<div class="mb-3">
+                                <div class="row">
+								<div class="mb-3 col">
 									<label>Enter Category</label> <select class="form-control" name="category">
 										<option>[[${product.category}]]</option>
 										<option th:each="c:${categories}">[[${c.name}]]</option>
 									</select>
+									</div>
 
-									<div class="mb-3">
+									<div class="mb-3 col">
 										<label>Enter Price</label> <input type="number" name="price" th:value="${product.price}"
 											class="form-control">
 									</div>
+									</div>
+									<div class="row">
+								<div class="mb-3 col">
+									<label>Discount</label>  <input type="number" name="discount" th:value="${product.discount}"
+											class="form-control">
+                                </div>
+									<div class="mb-3 col">
+										<label>Discount Price</label> <input type="number" name="discountPrice" readonly th:value="${product.discountPrice}"
+											class="form-control">
+									</div>
+									</div>
+									
 									<div class="row">
 										<div class="mb-3 col">
 											<label>Enter Stock</label> <input type="text" name="stock" th:value="${product.stock}"
@@ -59,12 +73,14 @@
 											<label>Upload Image</label> <input type="file" name="file"
 												class="form-control">
 										</div>
+										</div>
 										<div class="mt-1">
 										<img th:src="@{'/img/product_img/'+${product.image}}"
 									width="100px" height="100px">
 									</div>
 									</div>
 									<button class="btn btn-primary col-md-12">Update</button>
+								</div>
 								</div>
 							</form>
 						</div>
