--- a/src/main/resources/templates/admin/add_product.html
+++ b/src/main/resources/templates/admin/add_product.html
@@ -48,6 +48,21 @@
 										<label>Enter Price</label> <input type="number" name="price"
 											class="form-control">
 									</div>
+									<div class="md-3">
+									<label>Status</label>
+									<div class="form-check">
+										<input class="form-check-input" type="radio" value="true"
+											name="isActive" id="radioDefault1" checked> <label
+											class="form-check-label" for="radioDefault1"> Active
+										</label>
+									</div>
+									<div class="form-check">
+										<input class="form-check-input" type="radio" value="false"
+											name="isActive" id="radioDefault2"> <label
+											class="form-check-label" for="radioDefault2">
+											Inactive </label>
+									</div>
+								</div>
 									<div class="row">
 										<div class="mb-3 col">
 											<label>Enter Stock</label> <input type="text" name="stock"
