--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -80,10 +80,12 @@
 										<td><img
 											th:src="@{'/img/category_img/'+${cat.imageName}}"
 											width="50px" height="50px"></td>
-										<td>
-										<a th:href="@{'/admin/edit_category/'+${cat.id}}" class="btn btn-primary btn-sm"><i class="fa-solid fa-pen-to-square  fa-1x"></i>Edit</a>
-										<a th:href="@{'/admin/deleteCategory/'+${cat.id}}" href="#" class="btn btn-danger btn-sm"><i class="fa-solid fa-trash"></i>Delete</a>
-										</td>
+										<td><a th:href="@{'/admin/edit_category/'+${cat.id}}"
+											class="btn btn-primary btn-sm"><i
+												class="fa-solid fa-pen-to-square  fa-1x"></i>Edit</a> <a
+											th:href="@{'/admin/deleteCategory/'+${cat.id}}" href="#"
+											class="btn btn-danger btn-sm"><i
+												class="fa-solid fa-trash"></i>Delete</a></td>
 									</tr>
 								</tbody>
 							</table>
