--- a/src/main/resources/templates/admin/edit_product.html
+++ b/src/main/resources/templates/admin/edit_product.html
@@ -62,6 +62,21 @@
 											class="form-control">
 									</div>
 									</div>
+									<div class="md-3">
+									<label>Status</label>
+									<div class="form-check">
+										<input class="form-check-input" type="radio" value="true"
+											name="isActive" id="radioDefault1" th:checked="${product.isActive==true}"> <label
+											class="form-check-label" for="radioDefault1"> Active
+										</label>
+									</div>
+									<div class="form-check">
+										<input class="form-check-input" type="radio" value="false"
+											name="isActive" id="radioDefault2" th:checked="${product.isActive==false}"> <label
+											class="form-check-label" for="radioDefault2">
+											Inactive </label>
+									</div>
+								</div>
 									
 									<div class="row">
 										<div class="mb-3 col">
