display all details of category wise product

--- a/src/main/resources/templates/view_product.html
+++ b/src/main/resources/templates/view_product.html
@@ -17,18 +17,25 @@
 							height="400px">
 					</div>
 					<div class="col-md-6">
-						<p class="fs-3 mt-3">Mac book pro</p>
+						<p class="fs-3 mt-3">[[${product.title}]]</p>
 						<p>
-							<span class="fw-bold">Description</span><br>Mac book pro
-							15inch, 256GB, SSD
+							<span class="fw-bold">Description</span><br>[[${product.description}]]
 						</p>
 						<p>
-							<span class="fw-bold">Product Details:</span><br>Status: <span
-								class="badge bg-success">Available</span> <span
-								class="badge bg-warning">Out Of Stock</span><br>Category:Electronics<br>
+							<span class="fw-bold">Product Details:</span><br>Status: 
+							<th:block th:if="${product.stock>0}">
+							<span
+								class="badge bg-success">Available</span> 
+							</th:block>
+							
+							<th:block th:unless="${product.stock>0}">
+							<span
+								class="badge bg-warning">Out Of Stock</span> 
+							</th:block>
+							<br>Category:[[${product.category}]]<br>
 							Policy: 7 Days Replacement & Return<br>
-							<br> <span class="fw-bold fs-5">Price: Rs 47500.304 </span>
-							47500.304 <span class="text-success"> 0% off </span><br>
+							<br> <span class="fw-bold fs-5">Price:&nbsp; &nbsp; &nbsp; &nbsp;<i class="fas fa-rupee-sign"></i>.[[${product.discountPrice}]]</span>
+							<span class="fs-6 text-decoration-line-through text-secondary fw-bold">[[${product.price}]]</span> <span class="fs-6 text-success fw-bold">[[${product.discount}]]% off </span><br>
 						</p>
 						<div class="row">
 							<div class="col-md-4 text-danger text-center p-2">
@@ -45,7 +52,13 @@
 								<i class="fa-solid fa-truck"></i>
 								<p>Free Delivery</p>
 							</div>
-							<a href="#" class="btn btn-danger col-md-12">Add To Cart</a>
+							<th:block th:if="${product.stock>0}">
+							<a href="login.jsp" class="btn btn-danger col-md-12">Add To Cart</a>
+							</th:block>
+							
+							<th:block th:unless="${product.stock>0}">
+							<a href="#" class="btn btn-warning text-white col-md-12">Out Of Stock</a>
+							</th:block>
 						</div>
 					</div>
 				</div>
