--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -27,10 +27,12 @@
 					<div class="card shadow-sm p-0 mb-5 bg-body-tertiary rounded">
 						<div class="card-body">
 							<div class="list-group">
-								<a href="#"
-									class="list-group-item list-group-item-action active"
-									aria-current="true"> Categories </a> <a href="#"
-									th:each="c:${categories}"
+							<p class="fs-4">Category</p>
+								<a href="/product" th:classappend="${paramValue==''} ? 'active':' ' "
+									class="list-group-item list-group-item-action"
+									aria-current="true"> All </a> <a 
+									th:each="c:${categories}" th:href="@{'/product?category='+${c.name}}"
+									th:classappend = "${paramValue == c.name} ? 'active':' ' "
 									class="list-group-item list-group-item-action">[[${c.name}]]</a>
 							</div>
 						</div>
@@ -41,6 +43,8 @@
 						<div class="card-body">
 							<p class="fs-3 text-center">Products</p>
 							<div class="row">
+							
+							<th:block th:if="${products.size>0}">
 								<div class="col-md-3" th:each="p:${products}">
 									<div class="card">
 										<div class="card-body text-center">
@@ -54,12 +58,17 @@
 														[[${p.price}]]</span> <span class="fs-6 text-success">[[${p.discount}]]%
 														off</span>
 												</p>
-												<a href="/view" class="btn btn-primary col-md-6 offset-md-3">View
+												<a th:href="@{'/product/'+${p.id}}" class="btn btn-primary col-md-6 offset-md-3">View
 													Details</a>
 											</div>
 										</div>
 									</div>
 								</div>
+								</th:block>
+								
+								<th:block th:unless="${products.size>0}">
+								<p class="fs-4 text-center mt-4 text-danger">Product not available</p>
+								</th:block>
 								<!--end   -->
 							</div>
 						</div>
