--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,12 +18,18 @@
 							<p class="fs-4 text-center">
 								<b>LOGIN</b>
 							</p>
+							<div th:if="${param.error}" class="alert alert-danger">
+							Invalid email & password
+							</div>
+							<div th:if="${param.logout}" class="alert alert-success">
+							Logout Successfully
+							</div>
 						</div>
 						<div class="card-body">
-							<form>
+							<form action="/login" method="post">
 								<div class="mb-3">
 									<label class="form-label">Email</label> <input
-										class="form-control" name="email" type="email">
+										class="form-control" name="username" type="email">
 								</div>
 
 								<div class="mb-3">
