--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -14,61 +14,78 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
 	integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
 	crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-<!-- start navbar -->
-<nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><i class="fa-solid fa-cart-shopping"></i>Ecom Store</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/"><i class="fa-solid fa-house"></i>Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/product">Product</a>
-        </li>
-        
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Category
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        </ul>
-        
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/signin"><i class="fa-solid fa-right-to-bracket"></i>LOGIN</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/register">REGISTER</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">ADMIN</a>
-        </li>
-        </ul>
-    </div>
-  </div>
-</nav>
+	<!-- start navbar -->
+	<nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#"><i
+				class="fa-solid fa-cart-shopping"></i>Ecom Store</a>
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item"><a class="nav-link active"
+						aria-current="page" href="/"><i class="fa-solid fa-house"></i>Home</a>
+					</li>
+					<li class="nav-item"><a class="nav-link active"
+						aria-current="page" href="/product">Product</a></li>
+
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle active" href="#" role="button"
+						data-bs-toggle="dropdown" aria-expanded="false"> Category </a>
+						<ul class="dropdown-menu">
+							<li th:each="c:${category}"><a class="dropdown-item"
+								th:href="@{'/product?category='+${c.name}}">[[${c.name}]]</a></li>
+
+						</ul></li>
+				</ul>
+
+				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+					<th:block th:if="${user==null}">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/signin"><i
+								class="fa-solid fa-right-to-bracket"></i>LOGIN</a></li>
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/register">REGISTER</a></li>
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="#">ADMIN</a></li>
+					</th:block>
+					<th:block th:if="${user!=null}">
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle active" href="#" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false"> <i
+								class="fa-solid fa-user"></i> [[${user.name}]]
+						</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="#">Profile</a></li>
+								<li><a class="dropdown-item" href="#">Another action</a></li>
+
+							</ul></li>
+
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/logout"><i
+								class="fa-solid fa-right-to-bracket"></i> Logout</a></li>
+					</th:block>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<!--end navbar  -->
 	<div th:replace="${content}"></div>
-	
+
 	<!-- start footer -->
-	
-	<div class="container-fluid p-1 bg-primary text-center text-white mt-1" style="margin-top: 250px">
-	<p>ecom.com</p>
+
+	<div class="container-fluid p-1 bg-primary text-center text-white mt-1"
+		style="margin-top: 250px">
+		<p>ecom.com</p>
 	</div>
-	
+
 	<!--end footer  -->
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
