--- a/src/main/resources/templates/forgot_password.html
+++ b/src/main/resources/templates/forgot_password.html
@@ -16,7 +16,7 @@
 					<div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
 						<div class="card-header">
 							<p class="fs-4 text-center">
-								<b>LOGIN</b>
+								Forgot Password
 							</p>
 							<div th:if="${param.error}" class="alert alert-danger text-center">
 							[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
@@ -29,22 +29,13 @@
 							<form action="/login" method="post">
 								<div class="mb-3">
 									<label class="form-label">Email</label> <input
-										class="form-control" name="username" type="email">
+										class="form-control" name="username" type="email" placeholder="Enter your Email">
 								</div>
-
-								<div class="mb-3">
-									<label class="form-label">Password</label> <input
-										class="form-control" name="password" type="password">
-								</div>
+                               <div class="text-center">
 								<button type="submit"
-									class="btn bg-primary text-white col-md-12">Login</button>
+									class="btn bg-primary text-white ">Send</button>
+									</div>
 							</form>
-						</div>
-						<div class="card-footer text-center">
-							<a href="/forgot_password" class="text-decoration-none">Forgot Password</a><br>
-							Don't have an account? <a href="/register" class="text-decoration-none">Create
-								One</a>
-						</div>
 					</div>
 				</div>
 			</div>
