--- a/src/main/resources/templates/forgot_password.html
+++ b/src/main/resources/templates/forgot_password.html
@@ -15,31 +15,37 @@
 				<div class="col-md-6 mt-3 p-5">
 					<div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
 						<div class="card-header">
-							<p class="fs-4 text-center">
-								Forgot Password
-							</p>
-							<div th:if="${param.error}" class="alert alert-danger text-center">
-							[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
+							<p class="fs-4 text-center">Forgot Password</p>
+							<div class="text-center">
+								<div th:if="${SuccMsg}"
+									class="alert alert-success py-1 px-2 mb-0"
+									style="font-size: 14px;">
+									<span th:text="${SuccMsg}"></span>
+								</div>
+
+								<div th:if="${errorMsg}"
+									class="alert alert-danger py-1 px-2 mb-0"
+									style="font-size: 14px;">
+									<span th:text="${errorMsg}"></span>
+								</div>
 							</div>
-							<div th:if="${param.logout}" class="alert alert-success">
-							Logout Successfully
-							</div>
+
 						</div>
 						<div class="card-body">
-							<form action="/login" method="post">
+							<form action="/forgot_password" method="post">
 								<div class="mb-3">
 									<label class="form-label">Email</label> <input
-										class="form-control" name="username" type="email" placeholder="Enter your Email">
+										class="form-control" name="email" type="email"
+										placeholder="Enter your Email">
 								</div>
-                               <div class="text-center">
-								<button type="submit"
-									class="btn bg-primary text-white ">Send</button>
-									</div>
+								<div class="text-center">
+									<button type="submit" class="btn bg-primary text-white ">Send</button>
+								</div>
 							</form>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 	</section>
 
 </body>
