--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -15,30 +15,40 @@
 				<div class="col-md-6 mt-3 p-5">
 					<div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
 						<div class="card-header">
-							<p class="fs-4 text-center">
-								Reset Password
-							</p>
-							<div th:if="${param.error}" class="alert alert-danger text-center">
-							
+							<p class="fs-4 text-center">Reset Password</p>
+							<div th:if="${SuccMsg}"
+								class="alert alert-success py-1 px-2 mb-0"
+								style="font-size: 14px;">
+								<span th:text="${SuccMsg}"></span>
 							</div>
-							
+
+							<div th:if="${errorMsg}"
+								class="alert alert-danger py-1 px-2 mb-0"
+								style="font-size: 14px;">
+								<span th:text="${errorMsg}"></span>
+							</div>
+
 						</div>
 						<div class="card-body">
-							<form action="/login" method="post">
+							<form action="/reset_password" method="post">
 								<div class="mb-3">
 									<label class="form-label">New Password</label> <input
-										class="form-control" name="username" type="email">
+										class="form-control" name="password" type="password">
 								</div>
 
 								<div class="mb-3">
 									<label class="form-label">Confirm Password</label> <input
-										class="form-control" name="password" type="password">
+										class="form-control" type="password">
 								</div>
+								
+								<input type="hidden" th:value="${token}" name="token">
+								
 								<button type="submit"
-									class="btn bg-primary text-white col-md-12">Reset Password</button>
+									class="btn bg-primary text-white col-md-12">Reset
+									Password</button>
 							</form>
 						</div>
-			
+
 					</div>
 				</div>
 			</div>
