--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -29,27 +29,35 @@
 								<th scope="col">Image</th>
 								<th scope="col">Product Name</th>
 								<th scope="col">Price</th>
-								<th scope="col">Quantity</th>
+								<th scope="col" class="text-center">Quantity</th>
 								<th scope="col">Total Price</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr th:each="cart,c:${carts}">
 								<th scope="row">[[${c.count}]]</th>
-								<td><img th:src="@{'/img/product_img/'+${cart.product.image}}"
+								<td><img
+									th:src="@{'/img/product_img/'+${cart.product.image}}"
 									width="50px" height="50px"></td>
 								<td>[[${cart.product.title}]]</td>
 								<td>[[${cart.product.discountPrice}]]</td>
-								<td>[[${cart.quantity}]]</td>
+								<td class="text-center"><a
+									th:href="@{'/user/cartQuantityUpdate?sy=de&cid='+${cart.id}}"><i
+										class="fa-solid fa-minus"></i></a> [ [[${cart.quantity}]] ] <a
+									th:href="@{'/user/cartQuantityUpdate?sy=in&cid='+${cart.id}}"><i class="
+									fa-solid fa-plus"></i></a></td>
 								<td>[[${cart.totalPrice}]]</td>
 							</tr>
 							<tr>
-							<td colspan="4"></td>
-							<td class="fw-bold">Total Price</td>
-							<td></td>
+								<td colspan="4"></td>
+								<td class="fw-bold">Total Price</td>
+								<td class="fw-bold">&#8377; [[${totalOrderPrice}]]</td>
 							</tr>
 						</tbody>
 					</table>
+					<div class="text-center">
+					<a href="#" class="btn btn-warning">Proceed Payment</a>
+					</div>
 				</div>
 			</div>
 		</div>
