Product ordered backend completed

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -85,8 +85,7 @@
 
 	<!-- start footer -->
 
-	<div class="container-fluid p-1 bg-primary text-center text-white mt-1"
-		style="margin-top: 250px">
+	<div class="container-fluid p-1 bg-primary text-center text-white mt-5">
 		<p>ecom.com</p>
 	</div>
 
