--- a/src/main/resources/templates/user/order.html
+++ b/src/main/resources/templates/user/order.html
@@ -8,55 +8,56 @@
 <body>
 	<section>
 		<div class="container mt-5 p-5">
+			<form action="/user/save-order" method="post">
 			<div class="row">
 				<div class="col-md-6">
-					<p class="text-center fs-2">Fill Address</p>
+					<p class="text-center fs-2">Billing Address</p>
 					<hr>
-					<form>
+				
 						<div class="mb-3 row">
 							<div class="col p-1">
-								<label>First Name</label> <input type="text" name="firstName"
+								<label>First Name</label> <input type="text" name="firstName" required
 									class="form-control mt-1">
 							</div>
 							<div class="col p-1">
-								<label>Last Name</label> <input type="text" name="lastName"
+								<label>Last Name</label> <input type="text" name="lastName" required
 									class="form-control mt-1">
 							</div>
 						</div>
 
 						<div class="mb-3 row">
 							<div class="col p-1">
-								<label>Email</label> <input type="email" name="Email"
+								<label>Email</label> <input type="email" name="email" required
 									class="form-control mt-1">
 							</div>
 							<div class="col p-1">
-								<label>Phone Number</label> <input type="number"
-									name="phonenumber" class="form-control mt-1">
+								<label>Phone Number</label> <input type="number" required
+									name="phoneNo" class="form-control mt-1">
 							</div>
 						</div>
 
 						<div class="mb-3 row">
 							<div class="col p-1">
-								<label>Address</label> <input type="text" name="address"
+								<label>Address</label> <input type="text" name="address" required
 									class="form-control mt-1">
 							</div>
 							<div class="col p-1">
-								<label>City</label> <input type="text" name="city"
+								<label>City</label> <input type="text" name="city" required
 									class="form-control mt-1">
 							</div>
 						</div>
 
 						<div class="mb-3 row">
 							<div class="col p-1">
-								<label>State</label> <input type="text" name="state"
+								<label>State</label> <input type="text" name="state" required
 									class="form-control mt-1">
 							</div>
 							<div class="col p-1">
-								<label>PinCode</label> <input type="number" name="pincode"
+								<label>PinCode</label> <input type="number" name="pincode" required
 									class="form-control mt-1">
 							</div>
 						</div>
-					</form>
+		
 				</div>
 				<div class="col-md-6">
 					<p class="text-center fs-2">Payment Type</p>
@@ -68,7 +69,7 @@
 									<tr>
 										<td>Total Price</td>
 										<td>:</td>
-										<td>&#8377; 234578</td>
+										<td>&#8377; [[${orderPrice}]]</td>
 									</tr>
 
 									<tr>
@@ -86,7 +87,7 @@
 									<tr class="border-top">
 										<td>Total Price</td>
 										<td>:</td>
-										<td>&#8377; 234578</td>
+										<td>&#8377; [[${totalOrderPrice}]]</td>
 									</tr>
 								</tbody>
 							</table>
@@ -94,23 +95,24 @@
 					</div>
 					<div class="card shadow p-3 mb-5 mt-2 bg-body-tertiary rounded">
 						<div class="card-body">
-							<form action="/login" method="post">
+							<!--<form action="/login" method="post">-->
 								<div class="mb-3">
-									<label class="form-label">Select Payment Type</label> <select
+									<label class="form-label">Select Payment Type</label> <select name="paymentType" required
 										class="form-control">
-										<option>--select--</option>
-										<option>Cash On Delivery</option>
-										<option>Online Payment</option>
+										<option value="" disabled selected>--select--</option>
+										<option value="COD">Cash On Delivery</option>
+										<option value="ONLINE">Online Payment</option>
 									</select>
 								</div>
-								<button type="submit"
+								<button
 									class="btn bg-primary text-white col-md-12">Place
 									Order</button>
-							</form>
+							<!-- </form> -->
 						</div>
 					</div>
 				</div>
 			</div>
+			</form>
 		</div>
 	</section>
 
